сделала верстку формы

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -73,7 +73,7 @@
             </div>
           </div>
           <div class="main-products-list__booking">
-            <a class="button main-products-list__button" href="booking.html">заказать</a>
+            <a class="button green-button main-products-list__button" href="booking.html">заказать</a>
           </div>
         </li>
         <li class="main-products-list__item">
@@ -105,7 +105,7 @@
             </div>
           </div>
           <div class="main-products-list__booking">
-            <a class="button main-products-list__button" href="booking.html">заказать</a>
+            <a class="button green-button main-products-list__button" href="booking.html">заказать</a>
           </div>
           </div>
         </li>
@@ -138,7 +138,7 @@
             </div>
           </div>
           <div class="main-products-list__booking">
-            <a class="button main-products-list__button" href="booking.html">заказать</a>
+            <a class="button green-button main-products-list__button" href="booking.html">заказать</a>
           </div>
         </li>
         <li class="main-products-list__item">
@@ -170,7 +170,7 @@
             </div>
           </div>
           <div class="main-products-list__booking">
-            <a class="button main-products-list__button" href="booking.html">заказать</a>
+            <a class="button green-button main-products-list__button" href="booking.html">заказать</a>
           </div>
         </li>
         <li class="main-products-list__item">
@@ -202,7 +202,7 @@
             </div>
           </div>
           <div class="main-products-list__booking">
-            <a class="button main-products-list__button" href="booking.html">заказать</a>
+            <a class="button green-button main-products-list__button" href="booking.html">заказать</a>
           </div>
         </li>
         <li class="main-products-list__item">
@@ -234,7 +234,7 @@
             </div>
           </div>
           <div class="main-products-list__booking">
-            <a class="button main-products-list__button" href="booking.html">заказать</a>
+            <a class="button green-button main-products-list__button" href="booking.html">заказать</a>
           </div>
         </li>
         <li class="main-products-list__item">
@@ -266,7 +266,7 @@
             </div>
           </div>
           <div class="main-products-list__booking">
-            <a class="button main-products-list__button" href="booking.html">заказать</a>
+            <a class="button green-button main-products-list__button" href="booking.html">заказать</a>
           </div>
         </li>
         <li class="main-products-list__item">
@@ -277,7 +277,7 @@
             <p class="main-products-list__text">На самом деле вкусов гораздо больше!</p>
           </div>
           <div class="main-products-list__booking-more">
-            <a class="main-products-button__link-more" href="booking.html">показать все</a>
+            <a class="button gray-button main-products-list__button" href="booking.html">показать все</a>
           </div>
         </li>
       </ul>
@@ -300,7 +300,7 @@
             </div>
           </div>
           <div class="additional-products-list__booking">
-            <a class="button additional-products-list__link" href="booking.html">заказать</a>
+            <a class="button green-button additional-products-list__button" href="booking.html">заказать</a>
           </div>
         </li>
         <li class="additional-products-list__item">
@@ -318,7 +318,7 @@
             </div>
           </div>
           <div class="additional-products-list__booking">
-            <a class="button additional-products-list__link" href="booking.html">заказать</a>
+            <a class="button green-button additional-products-list__button" href="booking.html">заказать</a>
           </div>
         </li>
         <li class="additional-products-list__item">
@@ -336,7 +336,7 @@
             </div>
           </div>
           <div class="additional-products-list__booking">
-            <a class="button additional-products-list__link" href="booking.html">заказать</a>
+            <a class="button green-button additional-products-list__button" href="booking.html">заказать</a>
           </div>
         </li>
         <li class="additional-products-list__item">
@@ -354,7 +354,7 @@
             </div>
           </div>
           <div class="additional-products-list__booking">
-            <a class="button additional-products-list__link" href="booking.html">заказать</a>
+            <a class="button green-button additional-products-list__button" href="booking.html">заказать</a>
           </div>
         </li>
       </ul>
