--- a/source/form.html
+++ b/source/form.html
@@ -136,7 +136,7 @@
                 </ul>
               </fieldset>
               <div class="feedback__submit">
-                <button class="button feedback__send-button" type="submit">отправить заявку</button>
+                <button class="button green-button feedback__send-button" type="submit">отправить заявку</button>
                 <p class="feedback__note">&ast; &ndash; обязательные поля</p>
               </div>
             </form>
