--- a/source/index.html
+++ b/source/index.html
@@ -20,7 +20,7 @@
           alt="Логотип сайта Кэт энерджи">
       </a>
       <nav class="main-nav">
-        <button class="main-nav__toggle visually-hidden" type="button"><span class="visually-hidden">Открыть меню</span></button>
+        <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
         <div class="main-nav__wrapper">
           <ul class="main-nav__list site-list">
             <li class="site-list__item site-list__item--current">
@@ -45,7 +45,7 @@
         </div>
         <img class="intro__image" src="img/index-can-mobile@1x.png" width="280" height="270"
           alt="Рекламный образец продукции компании Кэт энерджи">
-        <a href="form.html" class="button intro__button">Подобрать программу</a>
+        <a href="form.html" class="button green-button intro__button">Подобрать программу</a>
       </section>
       <section class="program-type">
         <h2 class="program-type__title visually-hidden">Корм для котов компании Кэт энерджи</h2>
