делала верстку декоративных элементов

--- a/source/form.html
+++ b/source/form.html
@@ -15,8 +15,7 @@
 <body class="container">
   <br><br>
   <header class="page-header">
-    <a class="page-header__logo" href="https://htmlacademy.ru/intensive/adaptive" aria-label="HTML и CSS, уровень 2"
-      target="_blank">
+    <a class="page-header__logo" href="index.html">
       <img class="page-header__logo-image" src="img/logo-mobile.svg" width="191" height="39"
         alt="Логотип сайта Кэт энерджи">
     </a>
