--- a/source/index.html
+++ b/source/index.html
@@ -14,8 +14,7 @@
   <body class="container">
     <br><br>
     <header class="page-header">
-      <a class="page-header__logo" href="https://htmlacademy.ru/intensive/adaptive" aria-label="HTML и CSS, уровень 2"
-      target="_blank">
+      <a class="page-header__logo" href="#">
         <img class="page-header__logo-image" src="img/logo-mobile.svg" width="191" height="39"
           alt="Логотип сайта Кэт энерджи">
       </a>
@@ -70,18 +69,16 @@
           <h2 class="advantages__title">Как это работает</h2>
           <ul class="advantages__list advantages-list">
             <li class="advantages-list__item advantages-list__item--nutrients">
-              <p class="advantages-list__description">Функциональное питание содержит только полезные питательные вещества.
-              </p>
+              <p class="advantages-list__description advantages-list__description--nutrients">Функциональное питание содержит только полезные питательные вещества.</p>
             </li>
             <li class="advantages-list__item advantages-list__item--fast">
-              <p class="advantages-list__description">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
-              </p>
+              <p class="advantages-list__description advantages-list__description--fast">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
             </li>
             <li class="advantages-list__item advantages-list__item--modification">
-              <p class="advantages__description">Замените один-два приема обычной еды на наше функциональное питание.</p>
+              <p class="advantages-list__description advantages-list__description--modification">Замените один-два приема обычной еды на наше функциональное питание.</p>
             </li>
             <li class="advantages-list__item advantages-list__item--improvement">
-              <p class="advantages-list__description">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
+              <p class="advantages-list__description advantages-list__description--improvement">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
             </li>
           </ul>
         </div>
@@ -130,7 +127,10 @@
             <address class="contact-us__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</address>
           </div>
           <div class="contact-us__map-wrapper" aria-label="Улица Большая Конюшенная, дом 19/8, город Санкт-Петербург">
-            <img class="contact-us__map" src="img/bg-map-mobile@1x.png" alt="aдрес на карте компании Cat Energy">
+            <div style="position:relative;overflow:hidden;"><a href="https://yandex.ru/maps/2/saint-petersburg/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:0px;">Санкт‑Петербург</a><a href="https://yandex.ru/maps/2/saint-petersburg/?clid=2254922&ll=30.322740%2C59.938534&utm_medium=mapframe&utm_source=maps&z=19" style="color:#eee;font-size:12px;position:absolute;top:14px;">Санкт‑Петербург — Яндекс.Карты</a><iframe src="https://yandex.ru/map-widget/v1/-/CSVTJXm-" width="560" height="400" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe></div>
+            <p>
+              <img class="contact-us__map" src="img/bg-map-mobile@1x.png" alt="aдрес на карте компании Cat Energy">
+            </p>
             <!--<div class="contact-us__pin-wrapper" aria-label="Указатель положения на карте"></div>-->
           </div>
         </div>
