--- a/source/catalog.html
+++ b/source/catalog.html
@@ -15,13 +15,12 @@
 <body class="container">
   <br><br>
   <header class="page-header">
-    <a class="page-header__logo" href="https://htmlacademy.ru/intensive/adaptive" aria-label="HTML и CSS, уровень 2"
-      target="_blank">
+    <a class="page-header__logo" href="index.html">
       <img class="page-header__logo-image" src="img/logo-mobile.svg" width="191" height="39"
         alt="Логотип сайта Кэт энерджи">
     </a>
     <nav class="main-nav">
-      <button class="main-nav__toggle visually-hidden" type="button"><span class="visually-hidden">Открыть
+      <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть
           меню</span></button>
       <div class="main-nav__wrapper">
         <ul class="main-nav__list site-list">
