--- a/source/catalog.html
+++ b/source/catalog.html
@@ -13,13 +13,12 @@
 
 
 <body class="container">
-  <br><br>
   <header class="page-header">
     <a class="page-header__logo" href="index.html">
       <img class="page-header__logo-image" src="img/logo-mobile.svg" width="191" height="39"
         alt="Логотип сайта Кэт энерджи">
     </a>
-    <nav class="main-nav">
+    <nav class="main-nav main-nav--closed main-nav--nojs">
       <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть
           меню</span></button>
       <div class="main-nav__wrapper">
@@ -362,8 +361,9 @@
       <a class="promotion__link" href="booking.html">
         <?xml version="1.0" encoding="utf-8"?>
         <!-- Generator: Adobe Illustrator 21.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0) -->
-        <svg class="promotion__icon" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-          x="0px" y="0px" width="56" height="61" viewBox="0 0 55.5 60" style="enable-background:new 0 0 55.5 60;" xml:space="preserve">
+        <svg class="promotion__icon" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+          xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="56" height="61" viewBox="0 0 55.5 60"
+          style="enable-background:new 0 0 55.5 60;" xml:space="preserve">
           <path d="M52.3,12.2h-7c0.5-0.7,0.8-1.4,1.1-2.2c0.6-2,0.4-4.1-0.6-5.9c-1-1.8-2.6-3.1-4.6-3.7c-2-0.6-4.1-0.4-5.9,0.6
                 c-3.6,2-6.2,6.1-7.6,9c-1.4-2.9-4-7.1-7.6-9c-3.8-2-8.5-0.6-10.5,3.1c-1.4,2.7-1.2,5.8,0.5,8.1h-7c-1.7,0-3.1,1.4-3.1,3.1v9.4
                 c0,1.7,1.4,3.1,3.1,3.1H4v26.1c0,3.3,2.7,6,6,6h35.5c3.3,0,6-2.7,6-6V27.8h0.8c1.7,0,3.1-1.4,3.1-3.1v-9.4
@@ -395,8 +395,8 @@
   <footer class="page-footer">
     <div class="page-footer__wrapper">
       <div class="page-footer__logo">
-        <a class="page-footer__logo-link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="HTML и CSS, уровень 2"
-          target="_blank">
+        <a class="page-footer__logo-link" href="https://htmlacademy.ru/intensive/adaptive"
+          aria-label="HTML и CSS, уровень 2" target="_blank">
           <img class="page-footer__logo-image" src="img/logo-footer.svg" width="128" height="24"
             alt="Упрощённый логотип сайта Кэт энерджи">
         </a>
