сделала планшетную версию блока intro

--- a/source/index.html
+++ b/source/index.html
@@ -14,24 +14,26 @@
 
 <body class="container">
   <header class="page-header">
-    <a class="page-header__logo" href="index.html">
+    <!--<a class="page-header__logo" href="#">
       <img class="page-header__logo-image" src="img/logo-mobile.svg" width="191" height="39"
         alt="Логотип сайта Кэт энерджи">
-    </a>
-    <!--<a class="page-header__logo" href="#" aria-label="Логотип Кэт энерджи, главная страница">
+    </a>-->
+    <a class="page-header__logo" href="#" aria-label="Логотип сайта Кэт энерджи, главная страница">
       <picture>
         <source media="(min-width: 1200px)" srcset="img/logo-desktop.svg">
         <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
         <img class="page-header__logo-image" src="img/logo-mobile.svg" alt="Логотип сайта Кэт энерджи">
       </picture>
     </a>
-    <a class="main-nav__logo" href="#" aria-label="Логотип сайта Седона, главная страница">
+
+    <!--<a class="main-nav__logo" href="#" aria-label="Логотип сайта Седона, главная страница">
       <picture>
         <source media="(min-width: 1200px)" srcset="img/logo-sedona-desktop.svg">
         <source media="(min-width: 768px)" srcset="img/logo-sedona-tablet.svg">
         <img class="main-nav__logo-image" src="img/logo-sedona-mobile.svg" alt="Логотип сайта Седона">
       </picture>
     </a>-->
+
     <nav class="main-nav main-nav--closed main-nav--nojs">
       <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
       <div class="main-nav__wrapper">
@@ -59,30 +61,31 @@
       <picture>
         <source media="(min-width: 1200px)" srcset="img/index-can-desktop@1x.png 1x, img/index-can-desktop@2x.png 2x">
         <source media="(min-width: 768px)" srcset="img/index-can-tablet@1x.png 1x, img/index-can-tablet@2x.png 2x">
-        <img class="intro__image" src="img/index-can-mobile@1x.png" srcset="img/index-can-mobile@2x.png 2x" alt="">
+        <img class="intro__image" src="img/index-can-mobile@1x.png" srcset="img/index-can-mobile@2x.png 2x"
+          alt="Рекламный образец продукции компании Кэт энерджи">
       </picture>
-      <!--<img class="intro__image" src="img/index-can-mobile@1x.png" width="280" height="270"
-        alt="Рекламный образец продукции компании Кэт энерджи">
-      <a href="form.html" class="button green-button intro__button">Подобрать программу</a>-->
+      <a href="form.html" class="button green-button intro__button">Подобрать программу</a>
     </section>
     <section class="program-type">
-      <h2 class="program-type__title visually-hidden">Корм для котов компании Кэт энерджи</h2>
-      <ul class="program-type__list program-type-list">
-        <li class="program-type-list__item">
-          <h3 class="program-type-list__slim">похудение</h3>
-          <p class="program-type-list__slim-text">Ваш кот весит больше собаки и почти утратил способность лазить по
-            деревьям?
-            Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
-          <a class="program-type-list__link" href="catalog.html#slim">каталог slim</a>
-        </li>
-        <li class="program-type-list__item">
-          <h3 class="program-type-list__pro">набор массы</h3>
-          <p class="program-type-list__pro-text">Заработать авторитет среди дворовых котов и даже собак? Серия Cat
-            Energy
-            Pro поможет вашему коту нарастить необходимые мышцы!</p>
-          <a class="program-type-list__link" href="catalog.html#pro">каталог pro</a>
-        </li>
-      </ul>
+      <div class="program-type__wrapper">
+        <h2 class="program-type__title visually-hidden">Корм для котов компании Кэт энерджи</h2>
+        <ul class="program-type__list program-type-list">
+          <li class="program-type-list__item">
+            <h3 class="program-type-list__slim">похудение</h3>
+            <p class="program-type-list__slim-text">Ваш кот весит больше собаки и почти утратил способность лазить по
+              деревьям?
+              Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
+            <a class="program-type-list__link" href="catalog.html#slim">каталог slim</a>
+          </li>
+          <li class="program-type-list__item">
+            <h3 class="program-type-list__pro">набор массы</h3>
+            <p class="program-type-list__pro-text">Заработать авторитет среди дворовых котов и даже собак? Серия Cat
+              Energy
+              Pro поможет вашему коту нарастить необходимые мышцы!</p>
+            <a class="program-type-list__link" href="catalog.html#pro">каталог pro</a>
+          </li>
+        </ul>
+      </div>
     </section>
     <section class="advantages">
       <div class="advantages__wrapper">
