сделала планшетную версию типов программ

--- a/source/index.html
+++ b/source/index.html
@@ -14,8 +14,8 @@
 
 <body class="container">
   <header class="page-header">
-    <!--<a class="page-header__logo" href="#">
-      <img class="page-header__logo-image" src="img/logo-mobile.svg" width="191" height="39"
+    <!--<a class="page-header__logo" href="#" aria-label="Логотип сайта Кэт энерджи, главная страница">
+      <img class="page-header__logo-image" src="img/logo-desktop.svg" width="203" height="39"
         alt="Логотип сайта Кэт энерджи">
     </a>-->
     <a class="page-header__logo" href="#" aria-label="Логотип сайта Кэт энерджи, главная страница">
@@ -138,10 +138,10 @@
             <img class="demonstration__image" src="img/before-mobile@1x.png" width="311" height="232"
               alt="фото кота до приема Кэт Энерджи">
           </li>
-          <li class="demonstration__item demonstration__item--after slider__item">
+          <!--<li class="demonstration__item demonstration__item--after slider__item">
             <img class="demonstration__image" src="img/after-mobile@1x.png" width="311" height="232"
               alt="фото кота после приема Кэт Энерджи">
-          </li>
+          </li>-->
         </ul>
         <p class="demonstration__toggles slider__toggles">
           <button class="slider__toggle" type="button"
